k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kryxhub-backend-service
spec:
  selector:
    app: kryxhub-backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
