k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: services.kryxhub.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kryxhub-backend-service
            port:
              number: 80
